@@ -2974,6 +2974,209 @@ operator|.
 name|getNodeManagerVersion
 argument_list|()
 expr_stmt|;
+name|List
+argument_list|<
+name|ApplicationId
+argument_list|>
+name|runningApps
+init|=
+name|reconnectEvent
+operator|.
+name|getRunningApplications
+argument_list|()
+decl_stmt|;
+name|boolean
+name|noRunningApps
+init|=
+operator|(
+name|runningApps
+operator|==
+literal|null
+operator|)
+operator|||
+operator|(
+name|runningApps
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+operator|)
+decl_stmt|;
+comment|// No application running on the node, so send node-removal event with
+comment|// cleaning up old container info.
+if|if
+condition|(
+name|noRunningApps
+condition|)
+block|{
+name|rmNode
+operator|.
+name|nodeUpdateQueue
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|rmNode
+operator|.
+name|context
+operator|.
+name|getDispatcher
+argument_list|()
+operator|.
+name|getEventHandler
+argument_list|()
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|NodeRemovedSchedulerEvent
+argument_list|(
+name|rmNode
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|rmNode
+operator|.
+name|getHttpPort
+argument_list|()
+operator|==
+name|newNode
+operator|.
+name|getHttpPort
+argument_list|()
+condition|)
+block|{
+comment|// Reset heartbeat ID since node just restarted.
+name|rmNode
+operator|.
+name|getLastNodeHeartBeatResponse
+argument_list|()
+operator|.
+name|setResponseId
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|rmNode
+operator|.
+name|getState
+argument_list|()
+operator|!=
+name|NodeState
+operator|.
+name|UNHEALTHY
+condition|)
+block|{
+comment|// Only add new node if old state is not UNHEALTHY
+name|rmNode
+operator|.
+name|context
+operator|.
+name|getDispatcher
+argument_list|()
+operator|.
+name|getEventHandler
+argument_list|()
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|NodeAddedSchedulerEvent
+argument_list|(
+name|newNode
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+comment|// Reconnected node differs, so replace old node and start new node
+switch|switch
+condition|(
+name|rmNode
+operator|.
+name|getState
+argument_list|()
+condition|)
+block|{
+case|case
+name|RUNNING
+case|:
+name|ClusterMetrics
+operator|.
+name|getMetrics
+argument_list|()
+operator|.
+name|decrNumActiveNodes
+argument_list|()
+expr_stmt|;
+break|break;
+case|case
+name|UNHEALTHY
+case|:
+name|ClusterMetrics
+operator|.
+name|getMetrics
+argument_list|()
+operator|.
+name|decrNumUnhealthyNMs
+argument_list|()
+expr_stmt|;
+break|break;
+block|}
+name|rmNode
+operator|.
+name|context
+operator|.
+name|getRMNodes
+argument_list|()
+operator|.
+name|put
+argument_list|(
+name|newNode
+operator|.
+name|getNodeID
+argument_list|()
+argument_list|,
+name|newNode
+argument_list|)
+expr_stmt|;
+name|rmNode
+operator|.
+name|context
+operator|.
+name|getDispatcher
+argument_list|()
+operator|.
+name|getEventHandler
+argument_list|()
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|RMNodeStartedEvent
+argument_list|(
+name|newNode
+operator|.
+name|getNodeID
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
 name|rmNode
 operator|.
 name|httpPort
@@ -3012,6 +3215,7 @@ argument_list|(
 literal|0
 argument_list|)
 expr_stmt|;
+block|}
 if|if
 condition|(
 literal|null
@@ -3110,9 +3314,10 @@ name|ResourceOption
 operator|.
 name|newInstance
 argument_list|(
-name|rmNode
+name|newNode
 operator|.
-name|totalCapability
+name|getTotalCapability
+argument_list|()
 argument_list|,
 operator|-
 literal|1
