@@ -104,6 +104,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -4038,6 +4048,99 @@ argument_list|(
 literal|5120
 operator|+
 literal|10240
+argument_list|,
+name|metrics
+operator|.
+name|getAvailableMB
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// reconnect of node with changed capability and running applications
+name|List
+argument_list|<
+name|ApplicationId
+argument_list|>
+name|runningApps
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|ApplicationId
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|runningApps
+operator|.
+name|add
+argument_list|(
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+literal|1
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|nm1
+operator|=
+name|rm
+operator|.
+name|registerNode
+argument_list|(
+literal|"host2:5678"
+argument_list|,
+literal|15360
+argument_list|,
+literal|2
+argument_list|,
+name|runningApps
+argument_list|)
+expr_stmt|;
+name|dispatcher
+operator|.
+name|await
+argument_list|()
+expr_stmt|;
+name|response
+operator|=
+name|nm1
+operator|.
+name|nodeHeartbeat
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|dispatcher
+operator|.
+name|await
+argument_list|()
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|NodeAction
+operator|.
+name|NORMAL
+operator|.
+name|equals
+argument_list|(
+name|response
+operator|.
+name|getNodeAction
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|5120
+operator|+
+literal|15360
 argument_list|,
 name|metrics
 operator|.
